Add nullable annotation